project2/solution/myC_newParser.java
// $ANTLR 3.5.2 myC_new.g 2020-05-14 12:16:54

    // import packages here.


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myC_newParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BREAK", "CASE", "CHAR", "COMMENT", 
		"CONTINUE", "DEFAULT", "DOUBLE", "ELSE", "FLOAT", "FOR", "Floating_point_constant", 
		"IF", "INCLUDE_TYPE", "INT", "Identifier", "Integer_constant", "MAIN", 
		"PRINTF", "RETURN_TYPE", "SCANF", "STRING_TYPE", "SWITCH", "VOID", "WHILE", 
		"WS", "'!='", "'%'", "'%='", "'&'", "'('", "')'", "'*'", "'*='", "'+'", 
		"'++'", "'+='", "','", "'-'", "'--'", "'-='", "'/'", "'/='", "':'", "';'", 
		"'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int BREAK=4;
	public static final int CASE=5;
	public static final int CHAR=6;
	public static final int COMMENT=7;
	public static final int CONTINUE=8;
	public static final int DEFAULT=9;
	public static final int DOUBLE=10;
	public static final int ELSE=11;
	public static final int FLOAT=12;
	public static final int FOR=13;
	public static final int Floating_point_constant=14;
	public static final int IF=15;
	public static final int INCLUDE_TYPE=16;
	public static final int INT=17;
	public static final int Identifier=18;
	public static final int Integer_constant=19;
	public static final int MAIN=20;
	public static final int PRINTF=21;
	public static final int RETURN_TYPE=22;
	public static final int SCANF=23;
	public static final int STRING_TYPE=24;
	public static final int SWITCH=25;
	public static final int VOID=26;
	public static final int WHILE=27;
	public static final int WS=28;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myC_newParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myC_newParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myC_newParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myC_new.g"; }


	    boolean TRACEON = true;



	// $ANTLR start "program"
	// myC_new.g:16:1: program : ( INCLUDE_TYPE )* ( main_start | fun ) ;
	public final void program() throws RecognitionException {
		try {
			// myC_new.g:16:8: ( ( INCLUDE_TYPE )* ( main_start | fun ) )
			// myC_new.g:16:9: ( INCLUDE_TYPE )* ( main_start | fun )
			{
			// myC_new.g:16:9: ( INCLUDE_TYPE )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==INCLUDE_TYPE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// myC_new.g:16:10: INCLUDE_TYPE
					{
					match(input,INCLUDE_TYPE,FOLLOW_INCLUDE_TYPE_in_program37); 
					}
					break;

				default :
					break loop1;
				}
			}

			// myC_new.g:16:25: ( main_start | fun )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==VOID) ) {
				alt2=1;
			}
			else if ( (LA2_0==CHAR||LA2_0==DOUBLE||LA2_0==FLOAT||LA2_0==INT) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// myC_new.g:16:26: main_start
					{
					pushFollow(FOLLOW_main_start_in_program42);
					main_start();
					state._fsp--;

					}
					break;
				case 2 :
					// myC_new.g:16:37: fun
					{
					pushFollow(FOLLOW_fun_in_program44);
					fun();
					state._fsp--;

					}
					break;

			}

			if (TRACEON) System.out.println("program:(INCLUDE_TYPE )* main_start");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "fun"
	// myC_new.g:18:1: fun : type Identifier '(' ( type Identifier ( ',' )? )* ')' '{' declarations statements return_end '}' ( fun | main_start ) ;
	public final void fun() throws RecognitionException {
		try {
			// myC_new.g:18:4: ( type Identifier '(' ( type Identifier ( ',' )? )* ')' '{' declarations statements return_end '}' ( fun | main_start ) )
			// myC_new.g:18:6: type Identifier '(' ( type Identifier ( ',' )? )* ')' '{' declarations statements return_end '}' ( fun | main_start )
			{
			pushFollow(FOLLOW_type_in_fun55);
			type();
			state._fsp--;

			match(input,Identifier,FOLLOW_Identifier_in_fun57); 
			match(input,33,FOLLOW_33_in_fun59); 
			// myC_new.g:18:27: ( type Identifier ( ',' )? )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==CHAR||LA4_0==DOUBLE||LA4_0==FLOAT||LA4_0==INT) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// myC_new.g:18:28: type Identifier ( ',' )?
					{
					pushFollow(FOLLOW_type_in_fun63);
					type();
					state._fsp--;

					match(input,Identifier,FOLLOW_Identifier_in_fun65); 
					// myC_new.g:18:44: ( ',' )?
					int alt3=2;
					int LA3_0 = input.LA(1);
					if ( (LA3_0==40) ) {
						alt3=1;
					}
					switch (alt3) {
						case 1 :
							// myC_new.g:18:44: ','
							{
							match(input,40,FOLLOW_40_in_fun67); 
							}
							break;

					}

					}
					break;

				default :
					break loop4;
				}
			}

			match(input,34,FOLLOW_34_in_fun72); 
			match(input,54,FOLLOW_54_in_fun74); 
			pushFollow(FOLLOW_declarations_in_fun76);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_fun78);
			statements();
			state._fsp--;

			pushFollow(FOLLOW_return_end_in_fun80);
			return_end();
			state._fsp--;

			match(input,55,FOLLOW_55_in_fun82); 
			// myC_new.g:18:98: ( fun | main_start )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==CHAR||LA5_0==DOUBLE||LA5_0==FLOAT||LA5_0==INT) ) {
				alt5=1;
			}
			else if ( (LA5_0==VOID) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// myC_new.g:18:99: fun
					{
					pushFollow(FOLLOW_fun_in_fun85);
					fun();
					state._fsp--;

					}
					break;
				case 2 :
					// myC_new.g:18:103: main_start
					{
					pushFollow(FOLLOW_main_start_in_fun87);
					main_start();
					state._fsp--;

					}
					break;

			}

			if (TRACEON) System.out.println("fun: type Identifier ( (type Identifier ',')* ) { declarations statements return_end } (fun|main_start)");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "fun"



	// $ANTLR start "main_start"
	// myC_new.g:21:1: main_start : VOID MAIN '(' ')' '{' declarations statements ( return_end )? '}' ;
	public final void main_start() throws RecognitionException {
		try {
			// myC_new.g:21:11: ( VOID MAIN '(' ')' '{' declarations statements ( return_end )? '}' )
			// myC_new.g:21:12: VOID MAIN '(' ')' '{' declarations statements ( return_end )? '}'
			{
			match(input,VOID,FOLLOW_VOID_in_main_start101); 
			match(input,MAIN,FOLLOW_MAIN_in_main_start103); 
			match(input,33,FOLLOW_33_in_main_start105); 
			match(input,34,FOLLOW_34_in_main_start107); 
			match(input,54,FOLLOW_54_in_main_start109); 
			pushFollow(FOLLOW_declarations_in_main_start111);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_main_start113);
			statements();
			state._fsp--;

			// myC_new.g:21:58: ( return_end )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==RETURN_TYPE) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// myC_new.g:21:58: return_end
					{
					pushFollow(FOLLOW_return_end_in_main_start115);
					return_end();
					state._fsp--;

					}
					break;

			}

			match(input,55,FOLLOW_55_in_main_start118); 
			if (TRACEON) System.out.println("VOID MAIN () {declarations statements return_end?}");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "main_start"



	// $ANTLR start "declarations"
	// myC_new.g:25:1: declarations : ( type Identifier ';' declarations | type Identifier '=' ( Integer_constant | Floating_point_constant | STRING_TYPE ) ';' declarations |);
	public final void declarations() throws RecognitionException {
		try {
			// myC_new.g:25:13: ( type Identifier ';' declarations | type Identifier '=' ( Integer_constant | Floating_point_constant | STRING_TYPE ) ';' declarations |)
			int alt7=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA7_1 = input.LA(2);
				if ( (LA7_1==35) ) {
					int LA7_6 = input.LA(3);
					if ( (LA7_6==Identifier) ) {
						int LA7_7 = input.LA(4);
						if ( (LA7_7==47) ) {
							alt7=1;
						}
						else if ( (LA7_7==50) ) {
							alt7=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 7, 7, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA7_1==Identifier) ) {
					int LA7_7 = input.LA(3);
					if ( (LA7_7==47) ) {
						alt7=1;
					}
					else if ( (LA7_7==50) ) {
						alt7=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA7_2 = input.LA(2);
				if ( (LA7_2==35) ) {
					int LA7_8 = input.LA(3);
					if ( (LA7_8==Identifier) ) {
						int LA7_7 = input.LA(4);
						if ( (LA7_7==47) ) {
							alt7=1;
						}
						else if ( (LA7_7==50) ) {
							alt7=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 7, 7, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 8, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA7_2==Identifier) ) {
					int LA7_7 = input.LA(3);
					if ( (LA7_7==47) ) {
						alt7=1;
					}
					else if ( (LA7_7==50) ) {
						alt7=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DOUBLE:
				{
				int LA7_3 = input.LA(2);
				if ( (LA7_3==35) ) {
					int LA7_9 = input.LA(3);
					if ( (LA7_9==Identifier) ) {
						int LA7_7 = input.LA(4);
						if ( (LA7_7==47) ) {
							alt7=1;
						}
						else if ( (LA7_7==50) ) {
							alt7=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 7, 7, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 9, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA7_3==Identifier) ) {
					int LA7_7 = input.LA(3);
					if ( (LA7_7==47) ) {
						alt7=1;
					}
					else if ( (LA7_7==50) ) {
						alt7=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA7_4 = input.LA(2);
				if ( (LA7_4==35) ) {
					int LA7_10 = input.LA(3);
					if ( (LA7_10==Identifier) ) {
						int LA7_7 = input.LA(4);
						if ( (LA7_7==47) ) {
							alt7=1;
						}
						else if ( (LA7_7==50) ) {
							alt7=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 7, 7, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA7_4==Identifier) ) {
					int LA7_7 = input.LA(3);
					if ( (LA7_7==47) ) {
						alt7=1;
					}
					else if ( (LA7_7==50) ) {
						alt7=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case BREAK:
			case CASE:
			case CONTINUE:
			case DEFAULT:
			case ELSE:
			case FOR:
			case Floating_point_constant:
			case IF:
			case Identifier:
			case Integer_constant:
			case PRINTF:
			case RETURN_TYPE:
			case SCANF:
			case SWITCH:
			case WHILE:
			case 33:
			case 38:
			case 41:
			case 42:
			case 55:
				{
				alt7=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
			switch (alt7) {
				case 1 :
					// myC_new.g:25:14: type Identifier ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations143);
					type();
					state._fsp--;

					match(input,Identifier,FOLLOW_Identifier_in_declarations145); 
					match(input,47,FOLLOW_47_in_declarations147); 
					pushFollow(FOLLOW_declarations_in_declarations149);
					declarations();
					state._fsp--;

					 if (TRACEON) System.out.println("declarations: type Identifier : declarations"); 
					}
					break;
				case 2 :
					// myC_new.g:26:13: type Identifier '=' ( Integer_constant | Floating_point_constant | STRING_TYPE ) ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations164);
					type();
					state._fsp--;

					match(input,Identifier,FOLLOW_Identifier_in_declarations166); 
					match(input,50,FOLLOW_50_in_declarations168); 
					if ( input.LA(1)==Floating_point_constant||input.LA(1)==Integer_constant||input.LA(1)==STRING_TYPE ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					match(input,47,FOLLOW_47_in_declarations178); 
					pushFollow(FOLLOW_declarations_in_declarations180);
					declarations();
					state._fsp--;

					 if (TRACEON) System.out.println("type Identifier '=' (Integer_constant|Floating_point_constant|STRING_TYPE) ';' declarations"); 
					}
					break;
				case 3 :
					// myC_new.g:27:14: 
					{
					 if (TRACEON) System.out.println("declarations: ");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "type"
	// myC_new.g:30:1: type : ( INT | FLOAT | DOUBLE | CHAR | INT '*' | FLOAT '*' | DOUBLE '*' | CHAR '*' );
	public final void type() throws RecognitionException {
		try {
			// myC_new.g:30:5: ( INT | FLOAT | DOUBLE | CHAR | INT '*' | FLOAT '*' | DOUBLE '*' | CHAR '*' )
			int alt8=8;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA8_1 = input.LA(2);
				if ( (LA8_1==35) ) {
					alt8=5;
				}
				else if ( (LA8_1==Identifier) ) {
					alt8=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA8_2 = input.LA(2);
				if ( (LA8_2==35) ) {
					alt8=6;
				}
				else if ( (LA8_2==Identifier) ) {
					alt8=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DOUBLE:
				{
				int LA8_3 = input.LA(2);
				if ( (LA8_3==35) ) {
					alt8=7;
				}
				else if ( (LA8_3==Identifier) ) {
					alt8=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA8_4 = input.LA(2);
				if ( (LA8_4==35) ) {
					alt8=8;
				}
				else if ( (LA8_4==Identifier) ) {
					alt8=4;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
